--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/utils": "6.4.3",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
+    "framer-motion": "^12.4.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "typescript": "^4.9.5"
