--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
     "framer-motion": "^12.4.2",
+    "leaflet": "^1.9.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-leaflet": "^5.0.0",
+    "react-router-dom": "^7.1.5",
     "typescript": "^4.9.5"
   },
   "scripts": {
